--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-backend",
+  "name": "notes-backend",
   "version": "1.0.0",
-  "description": "Backend for my notes app",
+  "description": "Backend for my notes site",
   "main": "dist/server.js",
   "scripts": {
     "start": "ts-node src/server.ts",
