--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^14.18.63",
+    "@types/pg": "^8.11.10",
     "@types/sqlite3": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
