--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.1.0",
     "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
