--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.13.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.6",
     "@supabase/supabase-js": "^2.47.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
