--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,7 @@
     "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
