--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,12 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
